<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".features.addreceipt.AddReceiptActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:counterMaxLength="25"
            app:errorEnabled="true">


            <EditText
                android:id="@+id/receipt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/what_you_buy_on_that_receipt" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_pleace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="15"
            app:errorEnabled="true">


            <EditText
                android:id="@+id/receipt_purchase_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pleace_of_buying_receipt" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="15"
            app:errorEnabled="true">


            <EditText
                android:id="@+id/receipt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_buying" />


        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/add_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/add_photo" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/Confrm" />

        <ImageView
            android:layout_margin="8dp"
            android:id="@+id/receipt_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

    </LinearLayout>
</ScrollView>

